# QUDO-tensor-network-solver

./: LICENSE  README.md  pyproject.toml
qudo_solver/: experimentation.ipynb  qubo-k-neighbors-matrix_optimized.ipynb  qubo-k-neighbors-matrix_optimized_waterfall.ipynb  qubo-k-neighbors-tensorkrowch_optimized.ipynb  qubo_k_neighbors_matrix_optimized.py  qubo_k_neighbors_tensorkrowch_optimized.py
qudo_solver/qudo_solver_core/: qubo_auxiliar_functions.py  qubo_solvers.py
